2008-01-05  Jonathan Pobst  <monkey@jpobst.com>

	* RichTextBoxTest.cs: Add test for bug #351886.

2007-12-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* CurrencyManagerTest.cs: In AddNew test, also check that
	CurrencyManager is firing the 2.0 ListChanged event, as well as
	passing the right ListChangedEventArgs.

2007-12-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBoxTest.cs: New assertions in FindStringTest and
	FindStringExactTest methods, needed to make sure we are doing the right
	thing in those methods.

2007-12-18  Everaldo Canuto  <ecanuto@novell.com>

	* MenuItemTest.cs: Add a test case for menuitem properties when created by
	CloneMenu. Thanks Luke Page for test case.

2007-12-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItemTest.cs: Added new Constructor_Group test, that I
	forgot to add after fixing a 2.0 bug.

2007-12-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItemTest.cs: Contructor_Serializable test only applies for 
	the 2.0 profile.

2007-12-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBoxTest.cs: Added test for the case when the selected item
	is removed.

2007-12-13  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutTest.cs: Add tests for bug #346246.

2007-12-11  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Add a test for bug #347282.

2007-12-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripManagerTest.cs: Add a test for bug #347669.

2007-12-07  Jonathan Pobst  <monkey@jpobst.com>

	* DataBindingTests.cs: Silence some debug spew.

2007-12-06  Andreia Gaita <avidigal@novell.com>

	* FormTest.cs: Run ChildFocused test for win only, relies
	on synch messages on X

2007-12-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItemTest.cs: Added new 2.0 Position test.

2007-12-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItemTest.cs: Added new serialization test.
