@@ -1,3 +1,7 @@
+2008-01-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ListControlTest.cs: New SelectedValue property test.
+
 2008-01-05  Jonathan Pobst  <monkey@jpobst.com>
 
 	* RichTextBoxTest.cs: Add test for bug #351886.
